tests/binding/pass/global_var_different_order.crs
fn test() {
    a;
}

var a : i32;