tests/binding/fail/function_var_same_name.crs
fn test() {
}

var test: i32;
